Fix editor styling of expand/collapse buttons

--- a/assets/src/editor/blocks/collapsible-text/style.scss
+++ b/assets/src/editor/blocks/collapsible-text/style.scss
@@ -1,6 +1,10 @@
 .collapsible-text {
-	position: static;
 	min-height: 5em;
+	position: static;
+
+	&.expanded .expand {
+		display: block !important;
+	}
 
 	&__button-settings {
 		bottom: 0;
@@ -10,13 +14,14 @@
 		position: absolute;
 		width: 100%;
 
+
 		&__setting {
 			padding-right: 2em;
 		}
 
 		label {
-			font-style: italic;
 			color: #999;
+			font-style: italic;
 		}
 	}
 
@@ -24,5 +29,3 @@
 		position: static !important;
 	}
 }
-
-
